# NeuralTangentEnsemble

./: .gitignore  README.md  environment.yaml  pyproject.toml  submit.sh  train-bp.py  train-continual-learning.py
configs/: common.yaml  train-bp.yaml  train-continual-learning.yaml
configs/data/: cifar10.yaml  cifar100.yaml  mnist.yaml
configs/logger/: wandb-logger.yaml
configs/model/: convnext.yaml  resnet18.yaml  simple-cnn.yaml  simple-mlp.yaml
configs/optimizer/: ntk-ensemble.yaml  scaled_true_sgd.yaml  sgd.yaml
configs/task-overrides/: mnist_simple-mlp_ntk-ensemble.yaml  mnist_simple-mlp_sgd.yaml  resnet18_mnist.yaml  resnet18_mnist_ntk-ensemble.yaml  simple-cnn_mnist.yaml  simple-cnn_mnist_ntk-ensemble.yaml  simple-cnn_mnist_sgd.yaml
figures/: wandb_plotting.ipynb
neural_tangent/: main.py  models.py  models_test.py  tasks.py  train.py
neural_tangent/configs/: default.py
projectlib/: data.py  models.py  ntk.py  training.py  utils.py
pytorch_demo/: demo_bayes.ipynb  demo_pruning.ipynb  gradient alignment is the problem.ipynb
